# open-perplexity

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
.codex-plugin/: plugin.json
skills/open-perplexity/: SKILL.md
src/open_perplexity/: __init__.py  cli.py  core.py
