[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-perplexity"
version = "0.1.0"
description = "A reusable Perplexity web automation CLI and Codex/OpenClaw-friendly plugin."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "LIASY032" }
]
keywords = ["perplexity", "cdp", "chrome", "automation", "codex", "plugin"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[project.urls]
Homepage = "https://github.com/LIASY032/open-perplexity"
Repository = "https://github.com/LIASY032/open-perplexity"
Documentation = "https://github.com/LIASY032/open-perplexity#readme"

[project.scripts]
open-perplexity = "open_perplexity.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
